syntax = "proto3";

package user;

import "google/protobuf/empty.proto"; 

option go_package = "gen/proto/user;user";


// The User message
message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

// Request to get a user by ID
message GetUserRequest {
  string id = 1;
}

// Response for GetUser
message GetUserResponse {
  User user = 1;
}

// Request to create a user
message CreateUserRequest {
  string name = 1;
  string email = 2;
}

// User service definition
service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty);
}